# key-utils

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  tapsigner_utils.cpp  tapsigner_utils.h  verifiedDialog.cpp  verifiedDialog.h  verifiedDialog.ui  xprivDialog.cpp  xprivDialog.h  xprivDialog.ui
contrib/bitcoin-core/: CMakeLists.txt
